[gd_scene load_steps=5 format=3 uid="uid://kwntag3kot73"]

[ext_resource type="Texture2D" uid="uid://6rn6hiods2qe" path="res://Art/gravity-Sheet.aseprite" id="1_lg0jo"]
[ext_resource type="Script" uid="uid://bu0cf4b41cn1o" path="res://Scripts/gravity_field.gd" id="2_4b0sw"]
[ext_resource type="AudioStream" uid="uid://ccjg53qgoklvi" path="res://Audio/SFX/gravity_inverter.ogg" id="3_cymao"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lg0jo"]
size = Vector2(1, 1)

[node name="Gravity Field" type="NinePatchRect"]
offset_right = 48.0
offset_bottom = 48.0
texture = ExtResource("1_lg0jo")
region_rect = Rect2(48, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("2_4b0sw")

[node name="GravityInverter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cymao")
volume_db = -14.31

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(15.5, 15.5)
shape = SubResource("RectangleShape2D_lg0jo")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
